--- a/SalesWebMVC/Views/Home/About.cshtml
+++ b/SalesWebMVC/Views/Home/About.cshtml
@@ -4,4 +4,8 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Aluno: @ViewData["Aluno"]</p>
+
+<address>
+    <strong>More Information: <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/">C# Course</a></strong>
+</address>
