--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -9,6 +9,10 @@
 
 <h2>@ViewData["Title"]</h2>
 
+<p>
+    <a asp-action="Create" class="btn btn-default">Create New</a>
+</p>
+
 <table class="table table-striped table-hover">
     <thead>
         <tr class="bg-primary">
@@ -16,10 +20,10 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Emai)
+                @Html.DisplayNameFor(model => model.Email)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Birthday)
+                @Html.DisplayNameFor(model => model.BirthDate)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.BaseSalary)
@@ -35,10 +39,10 @@
                    @Html.DisplayFor(modelItem => item.Name)
                </td>
                <td>
-                   @Html.DisplayFor(modelItem => item.Emai)
+                   @Html.DisplayFor(modelItem => item.Email)
                </td>
                <td>
-                   @Html.DisplayFor(modelItem => item.Birthday)
+                   @Html.DisplayFor(modelItem => item.BirthDate)
                </td>
                <td>
                    @Html.DisplayFor(modelItem => item.BaseSalary)
