Chave estrangeira não nula (integridade referencial).

--- a/SalesWebMVC/Views/Home/About.cshtml
+++ b/SalesWebMVC/Views/Home/About.cshtml
@@ -4,7 +4,7 @@
 <h2>@ViewData["Title"]</h2>
 <h3>@ViewData["Message"]</h3>
 
-<p>Aluno: @ViewData["Aluno"]</p>
+<p>Developed By: @ViewData["Aluno"]</p>
 
 <address>
     <strong>More Information: <a href="https://www.udemy.com/course/programacao-orientada-a-objetos-csharp/">C# Course</a></strong>
