--- a/SalesWebMVC/Views/Sellers/Index.cshtml
+++ b/SalesWebMVC/Views/Sellers/Index.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model IEnumerable<SalesWebMVC.Models.Seller>
+﻿@model IEnumerable<SalesWebMVC.Models.Seller>
 
 @{
     ViewData["Title"] = "Sellers";
