--- a/SalesWebMVC/Views/Departments/Index.cshtml
+++ b/SalesWebMVC/Views/Departments/Index.cshtml
@@ -4,14 +4,15 @@
     ViewData["Title"] = "Departments";
 }
 
-<h2>Departments</h2>
+<h2>@ViewData["Title"]</h2>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn btn-default">Create New</a>
 </p>
-<table class="table">
+
+<table class="table table-striped table-hover">
     <thead>
-        <tr>
+        <tr class="bg-primary">
             <th>
                 @Html.DisplayNameFor(model => model.Id)
             </th>
